# media-server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  build.ninja  config.mk  config.mk.sample  monktan89_README.md  package-lock.json  package.json  tracing.md
.github/workflows/: publish.yml  release.yml
cmake/: FindFFmpeg.cmake  FindGsm.cmake  FindMP4V2.cmake  FindOpenSSL.cmake  FindOpus.cmake  FindSRTP.cmake  FindSpeex.cmake  FindVPX.cmake  FindXMLRPC.cmake  Findx264.cmake
debian/: README  compile.sh  mcu.default  mcu.init
ext/crc32c/: CMakeLists.txt
ext/crc32c/config/Darwin-i386/crc32c/: crc32c_config.h
ext/crc32c/config/Linux-aarch64/crc32c/: crc32c_config.h
ext/crc32c/config/Linux-x86_64/crc32c/: crc32c_config.h
ext/crc32c/config/Linux-x86_64_nosse42/crc32c/: crc32c_config.h
fuzz/: fuzz.cpp
include/: ActiveSpeakerDetector.h  ActiveSpeakerMultiplexer.h  AudioBuffer.h  AudioBufferPool.h  AudioCodecFactory.h  AudioPipe.h  AudioTransrater.h  BitHistory.h  Buffer.h  BufferReader.h  BufferWritter.h  CPUMonitor.h  CheckSum  CheckSum.h  CircularBuffer.h  CircularQueue.h  CodecConfigurationRecord.h  DTLSICETransport.h  DatachannelTimeService.h  Datachannels.h  Deinterlacer.h  DependencyDescriptorLayerSelector.h  Encodable.h  EventLoop.h  EventSource.h  FLVEncoder.h  FecProbeGenerator.h  FileDescriptor.h  FlashSoundHandler.h  ForwardErrorCorrection.h  FrameDelayCalculator.h  FrameDispatchCoordinator.h  FrameMediaAppender.h  H26xFrameAppender.h  H26xNaluPacketizer.h  ICERemoteCandidate.h  MacAddress.h  MediaFrameListenerBridge.h  MediaUnitPacketizer.h  MedoozeTracing.h  (+139 more)
include/bfcp/: BFCPAttribute.h  BFCPFloorControlServer.h  BFCPMessage.h  BFCPUser.h
include/bitstream/: BitReader.h  BitWriter.h  BitWritter.h  ExpGolombDecoder.h  VLCDecoder.h
include/core/: VideoEncoderWorker.h
include/rfb/: rfbconfig.h  rfbconfig.h.cmake  rfbproto.h
include/rtmp/: amf.h  flvencoder.h  flvrecorder.h  objectparser.h  rtmp.h  rtmpapplication.h  rtmpchunk.h  rtmpclientconnection.h  rtmpconnection.h  rtmpflvstream.h  rtmphandshake.h  rtmpmessage.h  rtmpmp4stream.h  rtmpnetconnection.h  rtmppacketizer.h  rtmpparticipant.h  rtmpsclientconnection.h  rtmpserver.h  rtmpstream.h  rtmptranscoder.h
include/rtp/: DependencyDescriptor.h  LayerInfo.h  PacketStats.h  RTCPApp.h  RTCPBye.h  RTCPCommonHeader.h  RTCPCompoundPacket.h  RTCPExtendedJitterReport.h  RTCPFullIntraRequest.h  RTCPNACK.h  RTCPPacket.h  RTCPPayloadFeedback.h  RTCPRTPFeedback.h  RTCPReceiverReport.h  RTCPReport.h  RTCPSDES.h  RTCPSenderReport.h  RTPBuffer.h  RTPDepacketizer.h  RTPHeader.h  RTPHeaderExtension.h  RTPIncomingMediaStream.h  RTPIncomingMediaStreamDepacketizer.h  RTPIncomingMediaStreamMultiplexer.h  RTPIncomingSource.h  RTPIncomingSourceGroup.h  RTPLostPackets.h  RTPMap.h  RTPOutgoingSource.h  RTPOutgoingSourceGroup.h  RTPPacket.h  RTPPacketSched.h  RTPPacketizer.h  RTPPayload.h  RTPPayloadPool.h  RTPRedundantPacket.h  RTPSource.h  RTPStreamTransponder.h  RTPTimedPacket.h  RTPWaitedBuffer.h  (+1 more)
include/ws/: websocketconnection.h  websockets.h  websocketserver.h
lib/: mediamixer.cpp  mediamixer.h
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  Package-rtmpdebug.bash  configurations.xml  project.xml
src/: ActiveSpeakerDetector.cpp  ActiveSpeakerMultiplexer.cpp  AudioCodecFactory.cpp  AudioDecoderWorker.cpp  AudioEncoderWorker.cpp  AudioPipe.cpp  AudioTransrater.cpp  CPUMonitor.cpp  DTLSICETransport.cpp  Deinterlacer.cpp  DependencyDescriptorLayerSelector.cpp  EventLoop.cpp  EventSource.cpp  FLVEncoder.cpp  FecProbeGenerator.cpp  FlashPlayer.cpp  ForwardErrorCorrection.cpp  FrameDelayCalculator.cpp  FrameDispatchCoordinator.cpp  FrameMediaAppender.cpp  MacAddress.cpp  MediaFrameListenerBridge.cpp  MedoozeTracing.cpp  NetEventLoop.cpp  OpenSSL.cpp  PCAPFile.cpp  PCAPReader.cpp  PCAPTransportEmulator.cpp  PacketHeader.cpp  Poll.cpp  PollSignalling.cpp  RTPBundleTransport.cpp  RTPSmoother.cpp  RTPTransport.cpp  RawTxHelper.cpp  SRTPSession.cpp  SendSideBandwidthEstimation.cpp  SimulcastMediaFrameListener.cpp  SystemPoll.cpp  ThreadRegistry.cpp  (+99 more)
src/aac/: AACDecoder.cpp  AACDecoder.h  AACEncoder.cpp  AACEncoder.h  aacconfig.h  aacdecoder.cpp  aacdecoder.h  aacencoder.cpp  aacencoder.h
src/av1/: AV1.h  AV1CodecConfigurationRecord.cpp  AV1CodecConfigurationRecord.h  AV1Decoder.cpp  AV1Decoder.h  AV1Depacketizer.cpp  AV1Depacketizer.h  AV1Encoder.cpp  AV1Encoder.h  AV1LayerSelector.cpp  AV1LayerSelector.h  Av1FrameMediaAppender.h  Av1ObuPacketizer.h  Obu.cpp  Obu.h
src/bfcp/: BFCPAttribute.cpp  BFCPFloorControlServer.cpp  BFCPMessage.cpp  BFCPUser.cpp
src/cef/: Browser.cpp  Browser.h  Client.cpp  Client.h
src/core/: VideoEncoderWorker.cpp
src/flv1/: flv1codec.cpp  flv1codec.h
src/g711/: g711.h  g711codec.h  pcmacodec.cpp  pcmucodec.cpp
src/g722/: g722_decode.c  g722_enc_dec.h  g722_encode.c  g722codec.cpp  g722codec.h
src/gsm/: gsmcodec.cpp  gsmcodec.h
src/h263/: h263-1996codec.cpp  h263.cpp  h263.h  h263codec.cpp  h263codec.h  mpeg4codec.cpp  mpeg4codec.h
src/h264/: H264FrameMediaAppender.h  H264LayerSelector.cpp  H264LayerSelector.h  H264NaluPacketizer.h  H264Packetizer.cpp  H264Packetizer.h  H26xNal.h  (+12 more)
src/vnc/libvncclient/: Makefile  Makefile.am  listen.c  rfbproto.c  sockets.c  tight.c  tls_none.c
src/vnc/libvncserver/: Makefile  Makefile.am  Makefile.in  cargs.c  corre.c  cutpaste.c  hextile.c  httpd.c  main.c  rfbcrypto.h  rfbserver.c  rre.c  scale.c  selbox.c  server.c  sockets.c  tableinit24.c  tableinitcmtemplate.c  tableinittctemplate.c  tight.c  translate.c  websockets.c  zrle.c  zrleencodetemplate.c  zrlepalettehelper.c  zrlepalettehelper.h
src/vnc/libvncserver/tightvnc-filetransfer/: filelistinfo.c  filelistinfo.h  filetransfermsg.c  handlefiletransferrequest.c  rfbtightserver.c
test/: aac.cpp  bundle.cpp  cef.cpp  cpim.cpp  dd.cpp  ddls.cpp  eventloop.cpp  h264.cpp  main.cpp  overlay.cpp  rtmp.cpp  rtp.cpp  stun.cpp  test.h  tools.cpp  vp8.cpp  vp9.cpp
tools/: srtextract.cpp
(+638 files in other folders)
